# UyghurToolKit-Cpp

./: CMakeLists.txt  main.cpp
include/: macros.h
include/processing/processor/: default_processors.h  processor.h
include/resources/dictionaries/: date.h  letter_normalize.h  scripts.h
include/tools/: number.h  other.h  text.h
src/: CMakeLists.txt  core.h  macros.h
src/processing/processor/: default_processors.cpp
src/resources/dictionaries/: letter_normalize.cpp  numbers.h  scripts.cpp  symbols.h  vowels.h
src/tools/: date.cpp  date.h  number.cpp  text.cpp  unicode_string_convert.cpp  unicode_string_convert.h
